cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/Monday_com_Products__c.object-meta.xml
<CustomObject>
    <label>Monday.com Products</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monday.com Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monday.com Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>