cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Alias_Email__c.field-meta.xml
<CustomField>
    <fullName>Alias_Email__c</fullName>
    <formula>&quot;streamlinks@openexc.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias Email</label>
    <type>Text</type>
</CustomField>