cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Comprehensive_Sharepoint_Link__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Sharepoint_Link__c</fullName>
    <formula>IF(Product__r.Name = &apos;Comprehensive Conference Streaming Package&apos;,
SUBSTITUTE(&quot;https://openexchange.sharepoint.com/:f:/r/sites/Production/Shared%20Documents/General/Streamlinks/&quot;+Related_Event_Name__c+&quot;%20-%20&quot;+Account_Name__c,&quot; &quot;,&quot;%20&quot;),
(&quot; &quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will only populate if Product is Comprehensive - Deactivate</inlineHelpText>
    <label>*DEACTIVE* Comprehensive Sharepoint Link</label>
    <type>Text</type>
</CustomField>