cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Comprehensive_Sharepoint_Link_Final__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Sharepoint_Link_Final__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>New 2023 URL for Workato to SF to Monday.com Integrations</inlineHelpText>
    <label>Comprehensive Sharepoint Link Final</label>
    <type>Url</type>
</CustomField>