cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Comprehensive_Streamlink_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Streamlink_Email_Subject__c</fullName>
    <formula>IF(Product__r.Name = &apos;Comprehensive Conference Streaming Package&apos;,
&quot;Comprehensive Streamlinks&quot; &amp;&quot; - &quot;&amp; Related_Event_Name__c &amp;&quot; - &quot;&amp; Account_Name__c
,
(&quot; &quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Will only populate if Product is Comprehensive</inlineHelpText>
    <label>Comprehensive Streamlink Email Subject</label>
    <type>Text</type>
</CustomField>