cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description/Notes</label>
    <type>TextArea</type>
</CustomField>