cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Manual_Push_Workato_Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Manual_Push_Workato_Test_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this off if you want a comprehensive streamlink sharepoint email to be sent to Workato.</inlineHelpText>
    <label>Manual Push Workato Test Email</label>
    <type>Checkbox</type>
</CustomField>