cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Monday_com_Integration__c.field-meta.xml
<CustomField>
    <fullName>Monday_com_Integration__c</fullName>
    <label>Monday.com Integration</label>
    <referenceTo>Monday_com_Integration__c</referenceTo>
    <relationshipLabel>Monday.com Products</relationshipLabel>
    <relationshipName>Monday_com_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>