cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Monday_com_Product_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Monday_com_Product_Order_ID__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula relates to the Monday.com Integration Order ID</inlineHelpText>
    <label>Monday.com Product Order ID</label>
    <type>Text</type>
</CustomField>