cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Month_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Month_Recognized__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month Recognized</label>
    <length>25</length>
    <type>Text</type>
</CustomField>