cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Order_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Event_Name__c</fullName>
    <formula>Monday_com_Integration__r.Event_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Event Name</label>
    <type>Text</type>
</CustomField>