cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>