cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Related_Order__r.Account_Name_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Name</label>
    <type>Text</type>
</CustomField>