cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Related_End_Date_Time__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Related_Order__r.End_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related End Date/Time</label>
    <type>DateTime</type>
</CustomField>