cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_Name__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Related_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Event Name</label>
    <type>Text</type>
</CustomField>