cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Event_Year__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(Monday_com_Integration__r.Order__r.Related_Order__r.Start_Date_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Event Year</label>
    <type>Text</type>
</CustomField>