cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_OE_Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_OE_Business_Lead__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Related_Order__r.OE_Business_Lead_Name_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related OE Business Lead</label>
    <type>Text</type>
</CustomField>