cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Order_Number__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Related_Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Order Number</label>
    <type>Text</type>
</CustomField>