cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Project_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Project_Manager_2__c</fullName>
    <formula>Monday_com_Integration__r.Order__r.Project_Manager_2__r.FirstName &amp; &quot; &quot; &amp;
Monday_com_Integration__r.Order__r.Project_Manager_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Project Manager 2</label>
    <type>Text</type>
</CustomField>