cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Related_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Related_Start_Date__c</fullName>
    <formula>TEXT(Monday_com_Integration__r.Order__r.Related_Order__r.Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Start Date</label>
    <type>Text</type>
</CustomField>