cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Requester_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Requester_Contact_Phone_Number__c</fullName>
    <formula>Monday_com_Integration__r.Requester_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Contact Phone Number</label>
    <type>Text</type>
</CustomField>