cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Rob_Garrigan_Email__c.field-meta.xml
<CustomField>
    <fullName>Rob_Garrigan_Email__c</fullName>
    <formula>&quot;rob.garrigan@openexc.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rob Garrigan Email</label>
    <type>Text</type>
</CustomField>