cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Special_Terms_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Terms/Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>