cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Start_and_End_Date_Crossover_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_and_End_Date_Crossover_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start and End Date Crossover Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>