cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Veracast_Order__c.field-meta.xml
<CustomField>
    <fullName>Veracast_Order__c</fullName>
    <formula>IF(TEXT(Monday_com_Integration__r.Order__r.Related_Order__r.Account_Legal_Entity__c) = &apos;Veracast&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that looks up to the Related Order Conference&apos;s legal entity</inlineHelpText>
    <label>Veracast Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>