cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Veracast_Product__c.field-meta.xml
<CustomField>
    <fullName>Veracast_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veracast Product</label>
    <type>Checkbox</type>
</CustomField>