cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/fields/Workato_Test_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Workato_Test_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Email will be sent to workatotest@openexc.com if a Comprehensive Conference Streaming Package is added. Any questions work with Michael Jay</inlineHelpText>
    <label>Workato Test Email Sent</label>
    <type>Checkbox</type>
</CustomField>