cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Monday_com_Integration__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>